# aptos-package-deterministic-deployment

./: Move.toml  README.md  deployed_addresses.yaml  yeaptor.toml.example
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml  yeaptor-ci.yml
crates/yeaptor/: Cargo.toml  README.md  build.rs  db_schema.csv.example  event_mappings.csv.example  yeaptor.toml  yeaptor.toml.example
crates/yeaptor/src/: config.rs  db_schema.rs  deployment.rs  env.rs  event_definition.rs  event_table_mapping.rs  lib.rs  main.rs  processor_config.rs  processor_config_generator.rs  version.rs
crates/yeaptor/src/tools/: deployment.rs  event.rs  indexer.rs  mod.rs
crates/yeaptor/tests/: config_test.rs
sources/: object_code_deployment.move
