[package]
name = "yeaptor"
version = "0.1.0"
edition = "2024"

[dependencies]
aptos = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }

[target.'cfg(unix)'.dependencies]
jemallocator = { version = "0.5.0", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }