[package]
name = "yeaptor"
version = "0.1.0"
edition = "2024"

[dependencies]
aptos = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }
clap = { version = "=4.5.31", features = ["derive"] }
tokio = { version = "=1.43", features = ["full"] }
# fix the version to avoid breaking changes
poem = { version = "=3.1.3", features = ["anyhow", "compression", "rustls"] }
poem-openapi = { version = "=5.1.2", features = ["swagger-ui", "url"] }
poem-openapi-derive = "=5.1.1"
darling = { version = "=0.20.10" }
darling_macro = { version = "=0.20.10" }
anyhow = "1.0.98"
[target.'cfg(unix)'.dependencies]
jemallocator = { version = "0.5.0", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }