[package]
name = "yeaptor"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
aptos = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }
aptos-cli-common = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }
aptos-framework = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }

clap = { version = "=4.5.31", features = ["derive"] }
tokio = { version = "=1.43", features = ["full"] }
# fix the version to avoid breaking changes
poem = { version = "=3.1.3", features = ["anyhow", "compression", "rustls"] }
poem-openapi = { version = "=5.1.2", features = ["swagger-ui", "url"] }
poem-openapi-derive = "=5.1.1"
darling = { version = "=0.20.10" }
darling_macro = { version = "=0.20.10" }
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = {version = "3.12.0"}
toml = "0.8"
hex = "0.4"
async-trait = "0.1.88"

[dev-dependencies]
tempfile = "3.0"

[target.'cfg(unix)'.dependencies]
jemallocator = { version = "0.5.0", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }

[patch."https://github.com/aptos-labs/aptos-core"]
aptos = { git = "https://github.com/yeap-finance/aptos-core", branch = "mainnet" }
aptos-framework = { git = "https://github.com/yeap-finance/aptos-core", branch = "mainnet" }
aptos-cli-common = { git = "https://github.com/yeap-finance/aptos-core", branch = "mainnet" }
aptos-types = { git = "https://github.com/yeap-finance/aptos-core", branch = "mainnet" }

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
